# obr

./: .gitignore  .ubsignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXISTING_BEADS_STRUCTURE_AND_ARCHITECTURE.md  PLAN_TO_PORT_BEADS_WITH_SQLITE_AND_ISSUES_JSONL_TO_RUST.md  README.md  custom.db  flake.nix  install.sh  lefthook.yml  private_key.pem
.beads/: MCP_AGENT_MAIL_PATTERNS.md  SYNC_CLI_FLAG_SEMANTICS.md  SYNC_SAFETY_INVARIANTS.md  SYNC_THREAT_MODEL.md  issues.jsonl
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  ARTIFACT_LOG_SCHEMA.md  CLI_REFERENCE.md  E2E_SYNC_TESTS.md  INSTALLING.md  SYNC_MAINTENANCE_CHECKLIST.md  SYNC_SAFETY.md  TEST_HARNESS.md  TROUBLESHOOTING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_jsonl_parse.rs  fuzz_org_parse.rs  fuzz_validation.rs
scripts/: agent_smoke_test.sh  bench.sh  bench_regression.sh  build-release.sh  ci-local.sh  conformance.sh  coverage.sh  e2e.sh  e2e_full.sh  generate-report.sh  generate_json_baseline.sh
src/: lib.rs  logging.rs  main.rs  release_public_key.pem
tests/: bench_cold_warm.rs  bench_cold_warm_start.rs  bench_real_datasets.rs  benchmark_comparison.rs  benchmark_datasets.rs  conformance.rs  conformance_labels_comments.rs  conformance_schema.rs  conformance_workflows.rs  e2e_audit.rs  e2e_basic_lifecycle.rs  e2e_changelog.rs  e2e_cold_warm_benchmarks.rs  e2e_comments.rs  e2e_completions.rs  e2e_concurrency.rs  e2e_create_output.rs  e2e_env_overrides.rs  e2e_errors.rs  e2e_global_flags.rs  e2e_history.rs  e2e_history_restore_prune.rs  e2e_installer.rs  e2e_labels.rs  e2e_quick_capture.rs  e2e_ready.rs  (+24 more)
(+84 files in other folders)
