[package]
name = "beads_rust-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

[dependencies.beads_rust]
path = ".."

[[bin]]
name = "fuzz_jsonl_parse"
path = "fuzz_targets/fuzz_jsonl_parse.rs"
doc = false

[[bin]]
name = "fuzz_org_parse"
path = "fuzz_targets/fuzz_org_parse.rs"
doc = false

[[bin]]
name = "fuzz_validation"
path = "fuzz_targets/fuzz_validation.rs"
doc = false

[workspace]
members = ["."]
